--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -31,16 +31,41 @@
             <section class="inicio__contenido">
                 <h1 class="inicio__contenido-h1">TÍTULO PELÍCULAS</h1>
             </section>
-            <section class="peliculas__grid">
-            <img class="peli1" src="../images/portadaInicio.jpg" alt="">
-            <img class="peli2" src="../images/portadaInicio.jpg" alt="">
-            <img class="peli3" src="../images/portadaInicio.jpg" alt="">
-            <img class="peli4" src="../images/portadaInicio.jpg" alt="">
-            <img class="peli5" src="../images/portadaInicio.jpg" alt="">
-            <img class="peli6" src="../images/portadaInicio.jpg" alt="">
-            <img class="peli8" src="../images/portadaInicio.jpg" alt="">
-            <img class="peli7" src="../images/portadaInicio.jpg" alt="">
-
+            <section class="peliculas__grid container" >
+                
+                <div class="container-peli">
+                    <h3>Título Secundario 1</h3>
+                    <img class="peli1" src="../images/portadaInicio.jpg" alt="">
+                </div>
+                <div class="container-peli">
+                    <h3>Título Secundario 2</h3>
+                    <img class="peli2" src="../images/portadaInicio.jpg" alt="">
+                </div>
+                <div class="container-peli">
+                    <h3>Título Secundario 3</h3>
+                    <img class="peli3" src="../images/portadaInicio.jpg" alt="">
+                </div>
+                <div class="container-peli">
+                    <h3>Título Secundario 4</h3>
+                    <img class="peli4" src="../images/portadaInicio.jpg" alt="">
+                </div>
+                <div class="container-peli">
+                    <h3>Título Secundario 5</h3>
+                    <img class="peli5" src="../images/portadaInicio.jpg" alt="">
+                </div>
+                <div class="container-peli">
+                    <h3>Título Secundario 6</h3>
+                    <img class="peli6" src="../images/portadaInicio.jpg" alt="">
+                </div>
+                <div class="container-peli"> 
+                    <h3>Título Secundario 7</h3>
+                    <img class="peli8" src="../images/portadaInicio.jpg" alt="">
+                </div>
+                <div class="container-peli">
+                    <h3>Título Secundario 8</h3>
+                    <img class="peli7" src="../images/portadaInicio.jpg" alt="">
+                </div>
+            </section>
 
     </main>
 
