--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,7 +40,7 @@
             </section>
             
 
-        </div class="formulario">
+        <div class="formulario">
                 <form action="" class="form">
                     <fieldset>
 
@@ -56,6 +56,7 @@
                     <input type="submit" value="ENVIAR">
                     </fieldset>
                 </form>
+        </div>
             </section>
 
             </main>
