--- a/pages/subgeneros.html
+++ b/pages/subgeneros.html
@@ -4,11 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
         <link rel="stylesheet" href="../style.css">
         <link rel="shortcut icon" href="icons/logogato.png" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-            <link rel="preconnect" href="https://fonts.googleapis.com">
+        
+                    <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
             <title>Subgéneros</title>
@@ -38,10 +41,17 @@
                     <img src="../images/portadaSubgeneros.png" alt="">
                 </picture>
             </section>
-            <section class="subgeneros__contenido"></section>
-                <h2 class="subgeneros__contenido-h2">SUBGÉNEROS</h2>
-                <p class="subgeneros__contenido-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, repellendus architecto nobis perferendis excepturi provident voluptas harum ipsa corrupti. Corporis dolor recusandae doloremque illo voluptate quisquam consequatur nisi, explicabo illum, laudantium dolorem. Vel optio, eligendi dolorem suscipit et voluptate vero maxime ipsa rerum delectus excepturi! Quisquam facilis modi doloremque. Ullam totam provident eius! Vel consequatur, perspiciatis quam, repellendus quis nemo corrupti voluptates saepe dolorem tempore enim accusamus reprehenderit quo ea itaque in optio soluta ratione nulla. Reprehenderit accusamus architecto placeat consequatur aspernatur sequi error facilis maxime similique tempora, voluptatem autem officiis dolore explicabo impedit rem quod repellat amet cum molestiae?</p>
-                <img class="subgeneros__imagenSecu" src="../images/imagen2Subgeneros.jpg" alt="">
+            
+            <section class="subgeneros__contenido container">
+                <div class="row">
+                    <div class="col-8">
+                        <h2 class="subgeneros__contenido-h2">SUBGÉNEROS</h2>
+                        <p class="subgeneros__contenido-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, repellendus architecto nobis perferendis excepturi provident voluptas harum ipsa corrupti. Corporis dolor recusandae doloremque illo voluptate quisquam consequatur nisi, explicabo illum, laudantium dolorem. Vel optio, eligendi dolorem suscipit et voluptate vero maxime ipsa rerum delectus excepturi! Quisquam facilis modi doloremque. Ullam totam provident eius! Vel consequatur, perspiciatis quam, repellendus quis nemo corrupti voluptates saepe dolorem tempore enim accusamus reprehenderit quo ea itaque in optio soluta ratione nulla. Reprehenderit accusamus architecto placeat consequatur aspernatur sequi error facilis maxime similique tempora, voluptatem autem officiis dolore explicabo impedit rem quod repellat amet cum molestiae?</p>
+                    </div>
+                    <div class="col-4">
+                        <img class="subgeneros__imagenSecu" src="../images/imagen2Subgeneros.jpg" alt="">
+                    </div>
+                </div>
             </section>
 
     </main>
