--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!--LIBRERÍA BOOTSTRAP-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
         
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../css/style.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
