--- a/pages/subgeneros.html
+++ b/pages/subgeneros.html
@@ -17,19 +17,28 @@
 
     </head>
     <body id="body">
-        <header id="header">
-            <nav id="navBar">
-                <ul>
-                    <li><a href="../index.html">INICIO</a></li>
-                    <li><a href="peliculas.html">PELÍCULAS</a></li>
-                    <li><a href="#">SUBGÉNEROS</a></li>
-                    <li><a href="clips.html">CLIPS</a></li>
-                    <li><a href="contacto.html">CONTACTO</a></li>
-                </ul>
+        <header id="header" class="border">
+
+            <nav class="navbar navbar-expand-lg" id="navBar">
+                <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                    <ul>
+                        <li><a href="../index.html">INICIO</a></li>
+                        <li><a href="peliculas.html">PELÍCULAS</a></li>
+                        <li><a href="#">SUBGÉNEROS</a></li>
+                        <li><a href="clips.html">CLIPS</a></li>
+                        <li><a href="contacto.html">CONTACTO</a></li>
+                    </ul>
+                </div>
+                </div>
             </nav>
+        
         </header>
 
-        <main id="main">
+        <main id="main" class="border">
             <section class="inicio__contenido">
                 <h1 class="inicio__contenido-h1">SUBGÉNEROS</h1>
                 <p class="inicio__contenido-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, repellendus architecto nobis perferendis excepturi provident voluptas harum ipsa corrupti. Corporis dolor recusandae doloremque illo voluptate quisquam consequatur nisi, explicabo illum, laudantium dolorem. Vel optio, eligendi dolorem suscipit et voluptate vero maxime ipsa rerum delectus excepturi! Quisquam facilis modi doloremque. Ullam totam provident eius! Vel consequatur, perspiciatis quam, repellendus quis nemo corrupti voluptates saepe dolorem tempore enim accusamus reprehenderit quo ea itaque in optio soluta ratione nulla. Reprehenderit accusamus architecto placeat consequatur aspernatur sequi error facilis maxime similique tempora, voluptatem autem officiis dolore explicabo impedit rem quod repellat amet cum molestiae?</p>
