--- a/pages/clips.html
+++ b/pages/clips.html
@@ -4,28 +4,40 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+        
         <link rel="stylesheet" href="../css/style.css">
         <link rel="shortcut icon" href="icons/logogato.png" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
             <title>Clips</title>
-
     </head>
+
+
     <body id="body">
         <header id="header" class="border">
-            <nav id="navBar">
-                <ul>
-                    <li><a href="../index.html">INICIO</a></li>
-                    <li><a href="peliculas.html">PELÍCULAS</a></li>
-                    <li><a href="subgeneros.html">SUBGÉNEROS</a></li>
-                    <li><a href="#">CLIPS</a></li>
-                    <li><a href="contacto.html">CONTACTO</a></li>
-                </ul>
+
+            <nav class="navbar navbar-expand-lg" id="navBar">
+                <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                    <ul>
+                        <li><a href="../index.html">INICIO</a></li>
+                        <li><a href="peliculas.html">PELÍCULAS</a></li>
+                        <li><a href="subgeneros.html">SUBGÉNEROS</a></li>
+                        <li><a href="#">CLIPS</a></li>
+                        <li><a href="contacto.html">CONTACTO</a></li>
+                    </ul>
+                </div>
+                </div>
             </nav>
+        
         </header>
+
 
         <main id="main" class="border">
             <section class="inicio__contenido">
