--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="cine, terror, slasher, 80', películas, halloween">
+        <meta name="description" content="La era dorada de los slasher, el apogeo del cine de terror en los 80'">
+        <meta name="author" content="Valentina Bajo">
+        <meta name="copyright" content="Valentina Bajo">
+        <meta name="og:image" content="images/michael.jpg">
+
         <link rel="shortcut icon" href="icons/logogato.png" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!--LIBRERÍA BOOTSTRAP-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
         
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="css/style.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
-            <title>Inicio</title>
+
+        <title>El cine de terror en los 80'</title>
     </head>
     <body id="body">
         <!--HEADER/NAV-->
@@ -41,14 +48,17 @@
             <!--IMÁGEN DEL SITIO -MAIN-->
             <section class="main__banner">
                 <picture class="main__banner-picture">
-                    <img src="images/portadaInicio.jpg" alt="">
+                    <img src="images/portadaInicio.jpg" alt="Portada de Inicio">
                 </picture>
             </section>
 
             <!--CONTENIDO TEXTO - MAIN-->
             <section class="inicio__contenido">
-                <h1 class="inicio__contenido-h1">EL TERROR EN LOS AÑOS 80</h1>
-                <p class="inicio__contenido-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, repellendus architecto nobis perferendis excepturi provident voluptas harum ipsa corrupti. Corporis dolor recusandae doloremque illo voluptate quisquam consequatur nisi, explicabo illum, laudantium dolorem. Vel optio, eligendi dolorem suscipit et voluptate vero maxime ipsa rerum delectus excepturi! Quisquam facilis modi doloremque. Ullam totam provident eius! Vel consequatur, perspiciatis quam, repellendus quis nemo corrupti voluptates saepe dolorem tempore enim accusamus reprehenderit quo ea itaque in optio soluta ratione nulla. Reprehenderit accusamus architecto placeat consequatur aspernatur sequi error facilis maxime similique tempora, voluptatem autem officiis dolore explicabo impedit rem quod repellat amet cum molestiae?</p>
+                <h1 class="inicio__contenido-h1">EL CINE DE TERROR EN LOS AÑOS 80</h1>
+                <p class="inicio__contenido-p">En la década de los 80 el cine de terror tuvo su apogeo, es considerada como la era dorada del género y redefinió el mismo con una explosión de creatividad, avances tecnológicos y narrativas audaces. Fue un periodo en el que el terror no solo consolidó grandes franquicias y personajes icónicos, sino que también exploró nuevas temáticas que conectaron profundamente con el público de la época.
+                    En aquella época, el cine de terror alcanzó un nivel de popularidad sin precedentes, transformándose en un fenómeno de masas que llenaba las salas de cine, dominaba los videoclubes y dejaba una huella en la cultura popular. 
+                    Lo que caracterizó esta etapa fue su mezcla de innovación y exceso. Cada película se atrevía a romper las reglas y explorar territorios desconocidos: monstruos más aterradores, efectos visuales impresionantes, muertes cada vez más impactantes y tramas que desafiaban lo convencional. Los directores de la época abrazaron esta libertad creativa, llevando el género a niveles nunca antes vistos.
+                    La tecnología de efectos especiales, todavía basada en técnicas prácticas, alcanzó una sofisticación asombrosa que dio vida a imágenes inolvidables. Combinados con bandas sonoras cargadas de sintetizadores y una estética vibrante que reflejaba el espíritu ochentero, estos elementos otorgaron al cine de terror de la década un estilo distintivo y atemporal que sigue siendo referencia en la actualidad.</p>
             </section>
 
             <!--VIDEO DEL SITIO - MAIN-->
@@ -61,7 +71,7 @@
             <!--FOOTER-->
             <section class="footer__logo">
                 <picture class="footer__logo-picture">
-                    <img class="footer__logo-pictureimg" src="icons/logogato.png" alt="">
+                    <img class="footer__logo-pictureimg" src="icons/logogato.png" alt="Icono Footer">
                 </picture>
             </section>
 
