--- a/pages/clips.html
+++ b/pages/clips.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="cine, terror, slasher, 80', películas, halloween, a nightmare on elm street, friday the 13th, michael myers, freddy krueger, jason voorhees, clips">
+        <meta name="description" content="La era dorada de los slasher, el apogeo del cine de terror en los 80'">
+        <meta name="author" content="Valentina Bajo">
+        <meta name="copyright" content="Valentina Bajo">
+        <meta name="og:image" content="images/michael.jpg">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
         
@@ -45,21 +50,24 @@
             </section>
             <section class="main__banner">
                 <picture class="main__banner-picture">
-                    <img src="../images/portadaClips.jpg" alt="">
+                    <img src="../images/portadaClips.jpg" alt="Portada Clips">
                 </picture>
             </section>
             <section class="inicio__contenido">
-                <p class="inicio__contenido-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, repellendus architecto nobis perferendis excepturi provident voluptas harum ipsa corrupti. Corporis dolor recusandae doloremque illo voluptate quisquam consequatur nisi, explicabo illum, laudantium dolorem. Vel optio, eligendi dolorem suscipit et voluptate vero maxime ipsa rerum delectus excepturi! Quisquam facilis modi doloremque. Ullam totam provident eius! Vel consequatur, perspiciatis quam, repellendus quis nemo corrupti voluptates saepe dolorem tempore enim accusamus reprehenderit quo ea itaque in optio soluta ratione nulla. Reprehenderit accusamus architecto placeat consequatur aspernatur sequi error facilis maxime similique tempora, voluptatem autem officiis dolore explicabo impedit rem quod repellat amet cum molestiae?</p>
+                <p class="inicio__contenido-p">En esta sección encontrarán una selección de clips emblemáticos que capturan algo de la esencia del cine slasher y su impacto en el género. Cada video representa momentos memorables de películas que definieron una época y dejaron una huella imborrable en el cine de terror.
+                    Halloween (1978): Revive la tensión inquietante del clásico de John Carpenter con una escena que muestra la fría y silenciosa amenaza de Michael Myers, el asesino enmascarado que transformó los suburbios en un escenario de pesadilla.
+                    A Nightmare on Elm Street (1984): Sumérgete en el terror surrealista de Wes Craven con un clip que introduce a Freddy Krueger, el monstruo de los sueños que convirtió los miedos nocturnos en una experiencia aterradora y única.
+                    Friday the 13th (1980): Experimenta el suspense y los giros impactantes del slasher campestre por excelencia. Este clip te transportará al icónico Camp Crystal Lake, donde las sombras esconden un peligro mortal.</p>
             </section>
 
 
             <section class="clips__grid">
 
-                <iframe class="inicio__contenidoVideo-iframe" src="https://www.youtube.com/embed/-3KwxcCA-bs?si=-WIL1wIb5MRdF3Ra" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="inicio__contenidoVideo-iframe" src="https://www.youtube.com/embed/zPSXZxia23k?si=ENOj4CCmUcyUo0ky" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-                <iframe class="inicio__contenidoVideo-iframe" src="https://www.youtube.com/embed/-3KwxcCA-bs?si=-WIL1wIb5MRdF3Ra" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="inicio__contenidoVideo-iframe" src="https://www.youtube.com/embed/e-9RtbMyNTQ?si=XdUjWKht5ZgIK1eI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-                <iframe class="inicio__contenidoVideo-iframe" src="https://www.youtube.com/embed/-3KwxcCA-bs?si=-WIL1wIb5MRdF3Ra" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="inicio__contenidoVideo-iframe" src="https://www.youtube.com/embed/K5SgZTeYFvc?si=g9TFU_ELdQkV4u41" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
             </section>
         </main>
@@ -67,7 +75,7 @@
         <footer id="footer" class="border">
             <section class="footer__logo">
                 <picture class="footer__logo-picture">
-                    <img class="footer__logo-pictureimg" src="../icons/logogato.png" alt="">
+                    <img class="footer__logo-pictureimg" src="../icons/logogato.png" alt="Icono Footer">
                 </picture>
             </section>
 
