--- a/pages/subgeneros.html
+++ b/pages/subgeneros.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="cine, terror, slasher, 80', películas, halloween, michael myers, freddy krueger, subgéneros terror, giallo, psycho, peeping tom, final girl">
+        <meta name="description" content="La era dorada de los slasher, el apogeo del cine de terror en los 80'">
+        <meta name="author" content="Valentina Bajo">
+        <meta name="copyright" content="Valentina Bajo">
+        <meta name="og:image" content="images/michael.jpg">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
@@ -40,24 +45,36 @@
 
         <main id="main" class="border">
             <section class="inicio__contenido">
-                <h1 class="inicio__contenido-h1">SUBGÉNEROS</h1>
-                <p class="inicio__contenido-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, repellendus architecto nobis perferendis excepturi provident voluptas harum ipsa corrupti. Corporis dolor recusandae doloremque illo voluptate quisquam consequatur nisi, explicabo illum, laudantium dolorem. Vel optio, eligendi dolorem suscipit et voluptate vero maxime ipsa rerum delectus excepturi! Quisquam facilis modi doloremque. Ullam totam provident eius! Vel consequatur, perspiciatis quam, repellendus quis nemo corrupti voluptates saepe dolorem tempore enim accusamus reprehenderit quo ea itaque in optio soluta ratione nulla. Reprehenderit accusamus architecto placeat consequatur aspernatur sequi error facilis maxime similique tempora, voluptatem autem officiis dolore explicabo impedit rem quod repellat amet cum molestiae?</p>
+                <h1 class="inicio__contenido-h1">EL SURGIMIENTO DEL SLASHER</h1>
+                <p class="inicio__contenido-p">El slasher es uno de los subgéneros más populares del cine de terror, tiene sus raíces en una combinación de influencias literarias, cinematográficas y culturales que dieron forma a su estructura característica: un asesino implacable, un grupo de víctimas y un estilo visual centrado en el suspenso y la violencia explícita. Aunque alcanzó su apogeo en los años 80, su origen puede rastrearse décadas atrás, en una evolución que refleja las ansiedades y obsesiones culturales de diferentes épocas.
+                    Las bases del slasher se pueden encontrar en los relatos góticos del siglo XIX, como Drácula de Bram Stoker y Frankenstein de Mary Shelley, donde figuras monstruosas acechan a sus víctimas en escenarios llenos de atmósfera. Aunque estas historias se centraban en criaturas sobrenaturales, establecieron el concepto de un villano que encarna el miedo colectivo.
+                    En el siglo XX, el cine comenzó a explorar estas ideas. Películas como Psycho (1960) de Alfred Hitchcock y Peeping Tom (1960) de Michael Powell introdujeron al público a asesinos humanos que operaban en espacios cotidianos, rompiendo la distancia entre el horror y la realidad. Psycho en particular, con su asesino metódico y su famosa escena de la ducha, sentó un precedente para el slasher al combinar violencia gráfica con un enfoque psicológico.
+                    Otro pilar fundamental del slasher fue el giallo italiano, un subgénero de cine de misterio y terror popular en las décadas de 1960 y 1970. Directores como Mario Bava (A Bay of Blood, 1971) y Dario Argento (Deep Red, 1975) desarrollaron historias de asesinatos estilizados, donde el foco estaba en el acto del crimen y el juego visual con sangre y violencia. Estas películas influyeron enormemente en la estética y la estructura narrativa del slasher estadounidense.</p>
             </section>
 
             <section class="main__banner">
                 <picture class="main__banner-picture">
-                    <img src="../images/portadaSubgeneros.png" alt="">
+                    <img src="../images/michael.jpg" alt="Michael Myers">
                 </picture>
             </section>
             
             <section class="subgeneros__contenido container">
                 <div class="row">
                     <div class="col-8">
-                        <h2 class="subgeneros__contenido-h2">SUBGÉNEROS</h2>
-                        <p class="subgeneros__contenido-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, repellendus architecto nobis perferendis excepturi provident voluptas harum ipsa corrupti. Corporis dolor recusandae doloremque illo voluptate quisquam consequatur nisi, explicabo illum, laudantium dolorem. Vel optio, eligendi dolorem suscipit et voluptate vero maxime ipsa rerum delectus excepturi! Quisquam facilis modi doloremque. Ullam totam provident eius! Vel consequatur, perspiciatis quam, repellendus quis nemo corrupti voluptates saepe dolorem tempore enim accusamus reprehenderit quo ea itaque in optio soluta ratione nulla. Reprehenderit accusamus architecto placeat consequatur aspernatur sequi error facilis maxime similique tempora, voluptatem autem officiis dolore explicabo impedit rem quod repellat amet cum molestiae?</p>
+                        <h2 class="subgeneros__contenido-h2">CARACTERÍSTICAS DEL SLASHER</h2>
+                        <p class="subgeneros__contenido-p">El eje de toda película slasher es el asesino, quien suele ser humano aunque en ocasiones adquiere características sobrenaturales. Su identidad es misteriosa y reforzada por una apariencia intimidante, que incluye máscaras o deformidades. Como es el caso de Michael Myers (Halloween) o Jason Voorhees (Friday the 13th).
+                            La motivación del antagonista generalmente está vinculada a traumas del pasado, deseos de venganza o una obsesión psicopática, lo que le otorga cierta dimensión trágica o retorcida. Además, su método de asesinato es distintivo: frecuentemente emplea armas blancas, como cuchillos, machetes o garras, que intensifican la brutalidad de sus ataques y la sensación de peligro directo.
+                            Las víctimas en los slashers suelen ser adolescentes o adultos jóvenes, generalmente retratados mediante estereotipos. Sus comportamientos transgresores, como el consumo de drogas, la promiscuidad o la desobediencia a normas sociales, son castigados sistemáticamente, lo que crea una especie de moralidad implícita en estas historias.
+                            Las muertes de las víctimas se presentan de manera progresiva, eliminándolos uno a uno. Este recurso no solo eleva la tensión, sino que también mantiene al espectador en constante expectativa mientras el grupo se reduce.
+                            Otro eje central son las "final girl" que son un elemento característico del slasher. Este personaje, generalmente una mujer, es la última en enfrentarse al asesino y por lo general quien logra sobrevivir. Su arco narrativo incluye un proceso de transformación, donde pasa de ser vulnerable a tomar el control y enfrentarse al antagonista. Algunos ejemplos podrían ser Laurie Strode (Halloween) o Sidney Prescott (Scream), quienes encarnan la fuerza y la astucia necesarias para resistir el horror.
+                            Los escenarios suelen desarrollarse en entornos aislados, como campamentos, casas rurales, suburbios aparentemente tranquilos o escuelas vacías. Estos escenarios, al limitar las posibilidades de ayuda externa, incrementan el suspense y el sentimiento de claustrofobia.
+                            La violencia es otro componente central del slasher, destacando por su creatividad. Las muertes son elaboradas y buscan impactar al espectador mediante sangre y gore.
+                            Otro recurso común es el uso de la perspectiva en primera persona del asesino, que pone al espectador en su lugar, aumentando la inmersión y el nerviosismo.
+                            Aunque el slasher a menudo se percibe como un ejercicio de violencia explícita, también puede contener una dimensión crítica. Muchas películas reflejan las ansiedades de su época, como el temor a la pérdida de seguridad en los suburbios, la violencia juvenil o el aislamiento social.
+                            Por último, el slasher, con su combinación de suspenso, violencia gráfica y personajes icónicos, ha evolucionado a lo largo del tiempo, pero sigue siendo un pilar del terror cinematográfico.</p>
                     </div>
                     <div class="col-4">
-                        <img class="subgeneros__imagenSecu" src="../images/imagen2Subgeneros.jpg" alt="">
+                        <img class="subgeneros__imagenSecu" src="../images/freddy.webp" alt="Freddy Krueger">
                     </div>
                 </div>
             </section>
@@ -66,7 +83,7 @@
         <footer id="footer">
             <section class="footer__logo">
                 <picture class="footer__logo-picture">
-                    <img class="footer__logo-pictureimg" src="../icons/logogato.png" alt="">
+                    <img class="footer__logo-pictureimg" src="../icons/logogato.png" alt="Icono Footer">
                 </picture>
             </section>
 
