--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="cine, terror, slasher, 80', películas, halloween">
+    <meta name="description" content="La era dorada de los slasher, el apogeo del cine de terror en los 80'">
+    <meta name="author" content="Valentina Bajo">
+    <meta name="copyright" content="Valentina Bajo">
+    <meta name="og:image" content="images/michael.jpg">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
@@ -47,7 +52,7 @@
     <main id="main" class="border">
         <section class="main__banner">
             <picture class="main__banner-picture">
-                <img src="../images/portadaInicio.jpg" alt="">
+                <img src="../images/portadaInicio.jpg" alt="Portada Contacto">
             </picture>
         </section>
         <div class="container-contacto">
@@ -74,15 +79,10 @@
                 </section>
             </div>
             <section class="contacto__contenido">
-                <p class="inicio__contenido-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias,
-                    repellendus architecto nobis perferendis excepturi provident voluptas harum ipsa corrupti. Corporis
-                    dolor recusandae doloremque illo voluptate quisquam consequatur nisi, explicabo illum, laudantium
-                    dolorem. Vel optio, eligendi dolorem suscipit et voluptate vero maxime ipsa rerum delectus
-                    excepturi! Quisquam facilis modi doloremque. Ullam totam provident eius! Vel consequatur,
-                    perspiciatis quam, repellendus quis nemo corrupti voluptates saepe dolorem tempore enim accusamus
-                    reprehenderit quo ea itaque in optio soluta ratione nulla. Reprehenderit accusamus architecto
-                    placeat consequatur aspernatur sequi error facilis maxime similique tempora, voluptatem autem
-                    officiis dolore explicabo impedit rem quod repellat amet cum molestiae?</p>
+                <p class="inicio__contenido-p">¡Contáctate con nosotros!
+                    Valoramos tus opiniones y comentarios. Si tienes algo que compartir, una sugerencia o deseas colaborar con nosotros, estamos disponibles para escucharte.
+                    Completa el formulario y nos pondremos en contacto contigo lo antes posible.
+                    Gracias por ser parte de nuestra comunidad.</p>
             </section>
 
         </div>
