Ultimo commit pre entrega

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,7 +56,7 @@
             </picture>
         </section>
         <div class="container-contacto">
-            <section class="inicio__contenido">
+            <section class="inicio__contenido-form">
                 <h1 class="inicio__contenido-h1">Contacto</h1>
             </section>
             <div class="container-formulario">
